grammar.js
    program: $ => repeat($._statement),

    _statement: $ =>
      choice(
        $.class_declaration,
        $.class_implementation,
        $.class_publication,
        $.class_local_friend_publication,
        $.interface_declaration,
        $._implementation_statement
      ),

    _implementation_statement: $ =>
      choice(
        $.variable_declaration,
        $.chained_variable_declaration,
        $.chained_structure_declaration,
        $.loop_statement,
        $.field_symbol_declaration,
        $.chained_field_symbol_declaration,
        $.exit_statement,
        $.continue_statement,
        $.report_statement,
        $.if_statement,
        $.return_statement,
        $.check_statement,
        $.assignment,
        $.select_statement_obsolete,
        $.read_table_statement,
        $.try_catch_statement,
        $.write_statement,
        $.chained_write_statement,
        $.call_method,
        $.call_method_static,
        $.call_method_instance,
        $.call_function,
        $.raise_exception_statement,
        $.clear_statement,
        $.append_statement,
        $.create_object_statement,
        $.include_statement
      ),

    class_declaration: $ =>
      seq(
        kw("class"),
        field("name", $.name),
        kw("definition"),
        optional(kw("public")),
        optional(
          seq(kw("inheriting"), kw("from"), field("superclass", $.name))
        ),
        optional(kw("abstract")),
        optional(kw("final")),
        optional($._create_addition),
        optional(seq(kw("shared"), kw("memory"), kw("enabled"))),
        optional(
          seq(
            optional(kw("global")),
            kw("friends"),
            field("friends", repeat1($.name))
          )
        ),
        ".",
        optional($.public_section),
        optional($.protected_section),
        optional($.private_section),
        kw("endclass"),
        "."
      ),

    _create_addition: $ =>
      seq(kw("create"), choice(kw("public"), kw("protected"), kw("private"))),

    public_section: $ =>
      seq(kw("public"), kw("section"), ".", repeat($._class_components)),

    protected_section: $ =>
      seq(kw("protected"), kw("section"), ".", repeat($._class_components)),

    private_section: $ =>
      seq(kw("private"), kw("section"), ".", repeat($._class_components)),

    _class_components: $ =>
      choice(
        $.variable_declaration,
        alias($.method_declaration_class, $.method_declaration),
        $.constructor_declaration,
        $.method_redefinition,
        alias($.class_method_declaration_class, $.class_method_declaration),
        $.class_constructor_declaration
      ),

    class_implementation: $ =>
      seq(
        kw("class"),
        field("name", $.name),
        kw("implementation"),
        ".",
        repeat($.method_implementation),
        kw("endclass"),
        "."
      ),

    _method_declaration_importing: $ =>
      seq(kw("importing"), repeat1($.method_parameters)),

    _method_declaration_raising: $ =>
      seq(
        kw("raising"),
        repeat1(choice($.name, seq(kw("resumable"), "(", $.name, ")")))
      ),

    _method_declaration_exceptions: $ => seq(kw("exceptions"), repeat1($.name)),

    method_parameters: $ =>
      seq(
        choice(
          seq(kw("value"), "(", $.name, ")"),
          seq(kw("reference"), "(", $.name, ")"),
          $._operand
        ),
        $._typing,
        optional(choice(kw("optional"), seq(kw("default"), $.name)))
      ),

    returning_parameter: $ =>
      seq(kw("returning"), kw("value"), "(", $.name, ")", $.complete_typing),

    constructor_declaration: $ =>
      seq(
        kw("methods"),
        kw("constructor"),
        optional(kw("final")),
        field(
          "importing_parameters",
          optional($._method_declaration_importing)
        ),
        field("raising", optional($._method_declaration_raising)),
        field("exceptions", optional($._method_declaration_exceptions)),
        "."
      ),

    class_constructor_declaration: $ =>
      seq(kw("class-methods"), kw("class_constructor"), "."),

    method_redefinition: $ =>
      seq(
        kw("methods"),
        $.name,
        optional(kw("final")),
        kw("redefinition"),
        "."
      ),

    method_implementation: $ =>
      seq(
        kw("method"),
        field("name", $.name),
        ".",
        optional($.method_body),
        kw("endmethod"),
        "."
      ),

    method_body: $ => repeat1($._implementation_statement),

    _typing: $ => choice($.generic_typing, $.complete_typing),

    complete_typing: $ =>
      choice(
        seq(kw("type"), alias($.name, $.type)),
        seq(kw("type"), kw("ref"), kw("to"), alias($.name, $.type))
      ),

    _data_object_typing: $ =>
      choice(
        //$._data_object_typing_built_in,
        $._data_object_typing_normal,
        //$._data_object_typing_enumerated,
        $._data_object_typing_reference,
        $._data_object_typing_itabs
        //$._data_object_typing_ranges
      ),

    variable_declaration: $ =>
      seq(
        kw("data"),
        field("name", $.name),
        field("typing", alias($._data_object_typing, $.typing)),
        "."
      ),

    chained_variable_declaration: $ =>
      seq(
        kw("data"),
        ":",
        repeat1(choice($.variable, seq(",", $.variable))),
        "."
      ),

    variable: $ => seq($.name, alias($._data_object_typing, $.typing)),

    if_statement: $ =>
      seq(
        kw("if"),
        $._logical_expression,
        ".",
        //FIXME: not all statements are allowed in statement_block
        repeat($._statement),
        kw("endif"),
        "."
      ),

    check_statement: $ => seq(kw("check"), $._logical_expression, "."),

    _logical_expression: $ =>
      choice(
        $.comparison_expression,
        prec.right(4, seq(kw("not"), $._logical_expression)),
        prec.left(
          1,
          seq($._logical_expression, kw("or"), $._logical_expression)
        ),
        prec.left(
          2,
          seq($._logical_expression, kw("and"), $._logical_expression)
        )
      ),

    comparison_expression: $ =>
      seq(
        $._general_expression_position,
        choice("=", kw("eq"), "<>", kw("ne")),
        $._general_expression_position
      ),

    _general_expression_position: $ =>
      choice(
        $.numeric_literal,
        $.character_literal,
        $._data_object,
        $._calculation_expression
      ),

    arithmetic_expression: $ =>
      choice(
        prec.left(
          1,
          seq(
            $._general_expression_position,
            "+",
            $._general_expression_position
          )
        ),
        prec.left(
          1,
          seq(
            $._general_expression_position,
            "-",
            $._general_expression_position
          )
        ),
        prec.left(
          2,
          seq(
            $._general_expression_position,
            "*",
            $._general_expression_position
          )
        ),
        prec.left(
          2,
          seq(
            $._general_expression_position,
            "/",
            $._general_expression_position
          )
        ),
        prec.left(
          2,
          seq(
            $._general_expression_position,
            "DIV",
            $._general_expression_position
          )
        ),
        prec.left(
          2,
          seq(
            $._general_expression_position,
            "MOD",
            $._general_expression_position
          )
        ),
        prec.left(
          3,
          seq(
            $._general_expression_position,
            "**",
            $._general_expression_position
          )
        )
      ),

    _writeable_expression: $ =>
      choice(
        // inline declaration
        // constructor expression
        $.table_expression
      ),

    structured_data_object: $ =>
      seq(
        alias(choice($.name, $.field_symbol_name), $.structure_name),
        repeat1(seq(token.immediate("-"), alias($.name, $.component_name)))
      ),

    assignment: $ =>
      seq(
        choice($.name, $._writeable_expression),
        "=",
        $._general_expression_position,
        "."
      ),

    try_catch_statement: $ =>
      seq(
        kw("try"),
        ".",
        optional($.try_block),
        repeat($.catch_statement),
        kw("endtry"),
        "."
      ),

    try_block: $ => repeat1($._statement),

    catch_statement: $ =>
      seq(
        kw("catch"),
        field("exception", $.name),
        optional(seq(kw("into"), field("oref", $.name))),
        ".",
        optional($.catch_block)
      ),

    catch_block: $ => repeat1($._statement),

    parameter_list: $ => repeat1($.parameter_binding),

    parameter_binding: $ =>
      seq(
        field("formal_parameter", $.name),
        "=",
        field("actual_parameter", $._general_expression_position)
      ),

    raise_exception_statement: $ =>
      seq(
        kw("raise"),
        kw("exception"),
        choice(
          seq(
            kw("type"),
            field("class", $.name),
            optional(
              field("parameters", seq(kw("exporting"), $.parameter_list))
            )
          ),
          field("oref", $.name)
        ),
        "."
      ),

    _operand: $ => choice($._escaped_operand, $.name),

    numeric_literal: $ => /[0-9]+/,

    name: $ => /[a-zA-Z_][a-zA-Z0-9_]{0,29}/i,
