test/corpus/loop_statement.txt
==================
loop statement with into
==================

loop at itab into wa.
endloop.

---
(program
  (loop
    (itab)
    (result)))

==================
loop statement with into
==================

loop at itab assigning <fs>.
endloop.

---
(program
  (loop
    (itab)
    (result)))
